# Autolife-Planning

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pip-compat.yml  release.yml
assets/envs/rls_env/pcd/: coffee_table.ply  open_kitchen.ply  rls_2.ply  sofa.ply  table.ply  wall.ply  workstation.ply
autolife_planning/: _ompl_vamp.pyi  _time_parameterization.pyi  autolife.py
autolife_planning/config/: robot_config.py
autolife_planning/envs/: pybullet_env.py
autolife_planning/kinematics/: __init__.py  collision_model.py  ik_solver_base.py  pink_ik_solver.py  trac_ik_solver.py
autolife_planning/planning/: __init__.py  constraints.py  costs.py  motion_planner.py  symbolic.py
autolife_planning/resources/robot/autolife/: autolife.srdf  autolife.urdf  autolife_base.urdf  autolife_base_simple.urdf  autolife_simple.urdf  autolife_spherized.urdf  autolife_viz.urdf
autolife_planning/resources/robot/autolife/meshes/: Link_Ankle_to_Knee.STL  Link_Camera_Gripper_Right.STL  Link_Camera_Head_Back.STL  Link_Camera_Head_Forehead.STL  Link_Camera_Head_Right_Eye.STL  Link_Ground_Vehicle.STL  Link_Ground_Vehicle_Visual_Cover.STL  Link_Head.STL  Link_IMU.STL  Link_Knee_Black_Cover.STL  Link_Knee_to_Waist_Pitch.STL  Link_Left_Elbow_to_Forearm.STL  Link_Left_Forearm_to_Wrist_Upper.STL  Link_Left_Gripper.STL  Link_Left_Gripper_Left_Finger.STL  Link_Left_Gripper_Left_Inner_Knuckle.STL  Link_Left_Gripper_Right_Finger.STL  Link_Left_Gripper_Right_Inner_Knuckle.STL  Link_Left_Gripper_Right_Outer_Knuckle.STL  Link_Left_Shoulder_Inner_to_Shoulder_Outer.STL  Link_Left_Shoulder_Outer_to_UpperArm.STL  Link_Left_UpperArm_to_Elbow.STL  Link_Left_Wrist_Lower_to_Gripper.STL  Link_Left_Wrist_Upper_to_Wrist_Lower.STL  Link_Lidar_Back.STL  Link_Lidar_Front.STL  Link_Neck_Roll_to_Neck_Pitch.STL  Link_Neck_Yaw_to_Head.STL  Link_Right_Elbow_to_Forearm.STL  Link_Right_Forearm_to_Wrist_Upper.STL  Link_Right_Gripper.STL  Link_Right_Gripper_Left_Finger.STL  Link_Right_Gripper_Left_Inner_Knuckle.STL  Link_Right_Gripper_Right_Finger.STL  Link_Right_Gripper_Right_Inner_Knuckle.STL  Link_Right_Gripper_Right_Outer_Knuckle.STL  Link_Right_Shoulder_Inner_to_Shoulder_Outer.STL  Link_Right_Shoulder_Outer_to_UpperArm.STL  Link_Right_UpperArm_to_Elbow.STL  Link_Right_Wrist_Lower_to_Gripper.STL  (+3 more)
autolife_planning/resources/robot/autolife/viz_meshes/: Link_Camera_Gripper_Left.STL  Link_Camera_Head_Left_Eye.STL  Link_Ground_Vehicle.STL  Link_Head.STL  Link_Left_Gripper_Left_Finger.STL  Link_Left_Gripper_Left_Inner_Knuckle.STL  Link_Left_Gripper_Right_Finger.STL  Link_Left_Shoulder_Inner_to_Shoulder_Outer.STL  Link_Left_Shoulder_Outer_to_UpperArm.STL  Link_Left_Wrist_Lower_Single_Gripper.STL  Link_Left_Wrist_Upper_to_Wrist_Lower.STL  Link_Neck_Pitch_to_Neck_Yaw.STL  Link_Neck_Roll_to_Neck_Pitch.STL  Link_Right_Gripper_Left_Inner_Knuckle.STL  (+9 more)
autolife_planning/trajectory/: __init__.py  totg.py  trajectory.py
autolife_planning/types/: __init__.py  geometry.py  ik.py  planning.py  robot.py
autolife_planning/utils/: pybullet_interface.py  rot_utils.py  video_recorder.py
cmake/patches/: ompl-nanobind-guard.patch
docs/: examples.md  getting-started.md  index.md
docs/api/: config.md  environments.md  kinematics.md  planning.md  trajectory.md  types.md  utilities.md
docs/assets/: motion_planning.benchmark.txt
docs/ik/: constrained.md  index.md  unconstrained.md
docs/planning/: cost.md  index.md  manifold.md  subgroup.md  trajectory.md
examples/: constrained_ik_example.py  constrained_ik_example_vis.py  constrained_planning_example.py  cost_planning_example.py  coupled_planning_example.py  ik_example.py  ik_example_vis.py  random_dance_around_table.py  rls_pick_place_demo.py  subgroup_planning_example.py  trac_ik_example_vis.py
examples/constrained_planning/: _shared.py  line_horizontal.py  line_vertical.py  orientation_lock.py  plane.py  plane_with_obstacle.py
examples/cost_planning/: _shared.py  line_horizontal.py  line_vertical.py  orientation_lock.py  plane.py  plane_with_obstacle.py
examples/demos/: rls_pick_place.py
examples/ik/: basic.py  basic_vis.py  constrained.py  constrained_vis.py  trac_ik_vis.py
examples/planning/: motion.py  subgroup.py  time_parameterization.py
examples/planning/constrained/: _shared.py  line_horizontal.py  line_vertical.py  orientation_lock.py  plane.py  plane_with_obstacle.py
examples/planning/cost/: _shared.py  line_horizontal.py  line_vertical.py  orientation_lock.py  plane.py  plane_with_obstacle.py
examples/robot/: autolife_planner.py  grasping.py  trajectory.py  visualize.py
ext/ompl_vamp/: compiled_cost.hpp  ompl_vamp_ext.cpp  planner.hpp  validity.hpp
ext/ompl_vamp/robot/: autolife.json
ext/time_parameterization/: LICENSE.TOTG  time_parameterization_ext.cpp  totg.cpp  totg.hpp
resources/robot/autolife/: autolife.srdf  autolife_spherized.urdf
resources/robot/autolife/meshes/: Link_Ankle_to_Knee.STL  Link_Knee_to_Waist_Pitch.STL  Link_Left_Elbow_to_Forearm.STL  Link_Left_Forearm_to_Wrist_Upper.STL  Link_Left_Gripper.STL  Link_Left_Gripper_Right_Inner_Knuckle.STL  Link_Left_Gripper_Right_Outer_Knuckle.STL  Link_Left_UpperArm_to_Elbow.STL  Link_Left_Wrist_Lower_to_Gripper.STL  Link_Neck_Yaw_to_Head.STL  Link_Right_Elbow_to_Forearm.STL  Link_Right_Forearm_to_Wrist_Upper.STL  Link_Right_Gripper.STL  Link_Right_Gripper_Left_Finger.STL  Link_Right_Wrist_Upper_to_Wrist_Lower.STL  Link_Waist_Pitch_to_Waist_Yaw.STL
scripts/: build_robot.sh  build_robot_description.py  build_subgroup_descriptions.py  build_subgroups.sh  build_wheels.sh  decompose_meshes.py  decompose_robot.sh  generate_fk.sh  spherize_robot.sh  spherize_subgroups.sh
scripts/benchmarks/: motion_planning.py
scripts/render_videos/: prepare_pointcloud_scene.py  render_docs_videos.py  render_rls_pick_place.py
tests/: test_constrained_planning.py  test_cost_planning.py  test_install_smoke.py  test_kinematics.py  test_planner_basic.py  test_smoke.py  test_trajectory.py
