[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0.0", "pybind11>=2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "autolife_planning"
version = "0.2.0"
description = "Autolife planning module"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pink",
]

[project.urls]
Homepage = "https://github.com/H-tr/Autolife-Planning"
Repository = "https://github.com/H-tr/Autolife-Planning"
Issues = "https://github.com/H-tr/Autolife-Planning/issues"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["autolife_planning"]
cmake.build-type = "Release"

# Keep sdist lean enough for PyPI's 100 MB limit.
# Only ship what's needed to rebuild the wheel from source:
#   - Python sources + package resources (URDFs, meshes shipped with
#     autolife_planning)
#   - CMake sources under ext/
#   - third_party/ompl sources (compiled from source) minus docs/demos/tests
#   - third_party/vamp cmake + header-only src (resources/ and build/ are not
#     needed to compile)
# Everything else — examples, demos, docs, mkdocs output, repo-level assets,
# the cricket / foam submodules (used only by scripts, never by the wheel
# build) — is excluded.
sdist.exclude = [
    # Repo-level non-build content
    "assets/",
    "docs/",
    "site/",
    "examples/",
    "tests/",
    "scripts/",
    "tools/",
    "build/",
    "dist/",
    ".pixi/",
    ".pytest_cache/",
    ".claude/",
    ".vscode/",
    ".coverage",
    "pixi.lock",
    "pixi.toml",

    # Unused third-party trees (only consumed by build_robot scripts)
    "third_party/cricket/",
    "third_party/foam/",

    # OMPL: ship only what the build links against
    "third_party/ompl/doc/",
    "third_party/ompl/tests/",
    "third_party/ompl/demos/",
    "third_party/ompl/py-bindings/",
    "third_party/ompl/scripts/",

    # VAMP: header-only, CMake needs cmake/ + src/impl/ only
    "third_party/vamp/resources/",
    "third_party/vamp/build/",
    "third_party/vamp/docker/",
    "third_party/vamp/scripts/",
]

[project.optional-dependencies]
dev = ["pre-commit", "pybullet", "pytest>=8.0", "trimesh>=4.0"]

# ── cibuildwheel ─────────────────────────────────────────────────────
# manylinux_2_34 (AlmaLinux 9) x86_64 baseline. AVX2 is required
# (VAMP/SIMDxorshift), which the default -march=x86-64-v3 in
# CMakeLists.txt already targets.
#
# Why 2_34 and not 2_28: OMPL requires Boost >= 1.68; EL8 (manylinux_2_28)
# ships Boost 1.66, too old. EL9 ships Boost 1.75 (and Eigen 3.4), which
# satisfies OMPL and provides BoostConfig.cmake. glibc 2.34 covers
# Ubuntu 22.04+, Debian 12+, RHEL 9+, Fedora 35+ — every current Linux.
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *-win32 *-manylinux_i686 pp*"
build-verbosity = 1
archs = ["x86_64"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_34"
before-all = "dnf install -y boost-devel eigen3-devel"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
# Silence third-party noise — none of these come from our code:
#   * osqp's PendingDeprecationWarning fires once per QP iteration
#     during Pink IK solves (~50–300× per test)
#   * qpsolvers' SparseConversionWarning is a perf hint to Pink for
#     handing it dense matrices instead of CSC
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning:osqp",
    "ignore::Warning:qpsolvers",
]
